# diffmesh

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
diffmesh/: test.py
src/: pybind11.cpp  pygalmesh_generate_2d.cpp  pygalmesh_generate_2d.hpp
src/diffmesh/: __init__.py  mesh2d_ext.py  object2d_ext.py
src/lib/: diffreal.cpp  diffreal.hpp  mesh2d.cpp  mesh2d.hpp  object2d.cpp  object2d.hpp  pybind11.cpp  test1.cpp  test2.cpp
src/tests/: diffuse.py  test_diffreal.py  test_mesh2d.py  test_object2d.py
