# https://github.com/pybind/scikit_build_example
# https://pypi.org/project/scikit-build-core/

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "diffmesh"
version = "0.1"
description="Differential meshing"
license = {text = "GPL-3.0-only"}
authors = [
  { name = "Miklos Maroti", email = "mmaroti@gmail.com" },
]
requires-python = ">=3.7"

[tool.scikit-build]
build-dir = "build"
